src/objects/Question__c.object
<CustomObject>
    <description>Click Loans</description>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfAppEmployment_Type__c</fullName>
        <description>Click Loans</description>
        <label>Employment Type</label>
        <picklist>
            <picklistValues>
                <fullName>PAYG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfApplicant_2_Api_Name__c</fullName>
        <description>Click Loans</description>
        <inlineHelpText>This field is used to store field API name for second applicant questions</inlineHelpText>
        <label>Applicant 2 Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfBubble_Text__c</fullName>
        <description>Click Loans</description>
        <label>Bubble Text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfComponent_Type__c</fullName>
        <description>Click Loans</description>
        <label>Component Type</label>
        <picklist>
            <picklistValues>
                <fullName>Assets &amp; Liabilities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfDependent_Field_Name__c</fullName>
        <description>Click Loans</description>
        <label>Dependent on (Field Name)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfDependent_Object_Name__c</fullName>
        <description>Click Loans</description>
        <label>Dependent on (Object Name)</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfDependent_Value__c</fullName>
        <description>Click Loans</description>
        <label>Dependent  on (Field Value)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfEmployment_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Employment Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfIs_Applicant_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is Applicant Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfIs_New_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is New Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfIs_refinance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is refinance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfNew_Loan_Sequence_No__c</fullName>
        <description>Click Loans</description>
        <label>New Loan Sequence No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acfRefinance_Sequence_No__c</fullName>
        <description>Click Loans</description>
        <label>Refinance Sequence No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acfReplace_Mobile_No__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Replace Mobile No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfWatermark_Text__c</fullName>
        <description>Click Loans</description>
        <label>Watermark Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acf_ApiName__c</fullName>
        <description>Click Loans</description>
        <label>ApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_Current_lender__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Current lender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acf_Dependents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Applicant Dependents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acf_Description__c</fullName>
        <description>Click Loans</description>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>acf_Level__c</fullName>
        <description>Click Loans</description>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acf_Master_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Master Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acf_Postal_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Postal Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acf_Question__c</fullName>
        <description>Click Loans</description>
        <label>Question</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>acf_Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Script</label>
        <referenceTo>Script__c</referenceTo>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acf_Sequence_No__c</fullName>
        <description>Click Loans</description>
        <label>Sequence No</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acf_Stage_Name__c</fullName>
        <description>Click Loans</description>
        <label>Stage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_Type__c</fullName>
        <description>Click Loans</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Button</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RadioButton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Click Loans Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>acfIs_New_Loan__c</columns>
        <columns>acfIs_refinance__c</columns>
        <columns>acf_Question__c</columns>
        <columns>acf_Sequence_No__c</columns>
        <columns>acf_Script__c</columns>
        <columns>acf_Master_Question__c</columns>
        <columns>acf_Type__c</columns>
        <columns>acf_Active__c</columns>
        <columns>acf_ApiName__c</columns>
        <columns>acf_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>acfApplicant_2_Api_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Script_0000</fullName>
        <columns>NAME</columns>
        <columns>acf_Question__c</columns>
        <columns>acf_Script__c</columns>
        <columns>acf_Sequence_No__c</columns>
        <columns>acf_Master_Question__c</columns>
        <columns>acf_Type__c</columns>
        <columns>acf_Active__c</columns>
        <columns>acf_ApiName__c</columns>
        <columns>acf_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acf_Script__c</field>
            <operation>equals</operation>
            <value>Script-0000</value>
        </filters>
        <label>2 Additional Properties</label>
    </listViews>
    <listViews>
        <fullName>Script_0001</fullName>
        <columns>NAME</columns>
        <columns>acf_Question__c</columns>
        <columns>acf_Script__c</columns>
        <columns>acf_Sequence_No__c</columns>
        <columns>acfNew_Loan_Sequence_No__c</columns>
        <columns>acfRefinance_Sequence_No__c</columns>
        <columns>acfIs_New_Loan__c</columns>
        <columns>acfIs_refinance__c</columns>
        <columns>acf_Master_Question__c</columns>
        <columns>acf_Type__c</columns>
        <columns>acf_Active__c</columns>
        <columns>acf_ApiName__c</columns>
        <columns>acf_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acf_Script__c</field>
            <operation>equals</operation>
            <value>Script-0001</value>
        </filters>
        <label>1 Pre Login Questions</label>
    </listViews>
    <listViews>
        <fullName>Script_0001new</fullName>
        <columns>acf_Active__c</columns>
        <columns>NAME</columns>
        <columns>acf_Question__c</columns>
        <columns>acf_Script__c</columns>
        <columns>acfRefinance_Sequence_No__c</columns>
        <columns>acfNew_Loan_Sequence_No__c</columns>
        <columns>acfIs_New_Loan__c</columns>
        <columns>acfIs_refinance__c</columns>
        <columns>acf_Master_Question__c</columns>
        <columns>acf_Type__c</columns>
        <columns>acf_ApiName__c</columns>
        <columns>acf_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acf_Script__c</field>
            <operation>equals</operation>
            <value>Script-0001</value>
        </filters>
        <filters>
            <field>acfIs_New_Loan__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>1 Pre Login Questions - New Loans</label>
    </listViews>
    <listViews>
        <fullName>Script_0001refi</fullName>
        <columns>acf_Active__c</columns>
        <columns>NAME</columns>
        <columns>acf_Question__c</columns>
        <columns>acf_Script__c</columns>
        <columns>acfRefinance_Sequence_No__c</columns>
        <columns>acfNew_Loan_Sequence_No__c</columns>
        <columns>acfIs_New_Loan__c</columns>
        <columns>acfIs_refinance__c</columns>
        <columns>acf_Master_Question__c</columns>
        <columns>acf_Type__c</columns>
        <columns>acf_ApiName__c</columns>
        <columns>acf_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acf_Script__c</field>
            <operation>equals</operation>
            <value>Script-0001</value>
        </filters>
        <filters>
            <field>acfIs_refinance__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>1 Pre Login Questions - Refinance</label>
    </listViews>
    <listViews>
        <fullName>Script_0002</fullName>
        <columns>NAME</columns>
        <columns>acf_Question__c</columns>
        <columns>acf_Script__c</columns>
        <columns>acf_Sequence_No__c</columns>
        <columns>acf_Master_Question__c</columns>
        <columns>acf_Type__c</columns>
        <columns>acf_Active__c</columns>
        <columns>acf_ApiName__c</columns>
        <columns>acfApplicant_2_Api_Name__c</columns>
        <columns>acf_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>acfIs_Applicant_Question__c</columns>
        <columns>acfDependent_Field_Name__c</columns>
        <columns>acfDependent_Value__c</columns>
        <columns>acfDependent_Object_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acf_Script__c</field>
            <operation>equals</operation>
            <value>Script-0002</value>
        </filters>
        <label>3 Applicant Details</label>
    </listViews>
    <listViews>
        <fullName>Script_0003</fullName>
        <columns>NAME</columns>
        <columns>acf_Question__c</columns>
        <columns>acf_Script__c</columns>
        <columns>acf_Sequence_No__c</columns>
        <columns>acf_Master_Question__c</columns>
        <columns>acf_Type__c</columns>
        <columns>acf_Active__c</columns>
        <columns>acf_ApiName__c</columns>
        <columns>acfApplicant_2_Api_Name__c</columns>
        <columns>acf_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acf_Script__c</field>
            <operation>equals</operation>
            <value>Script-0003</value>
        </filters>
        <label>4 Final Questions &amp; Resp Lending</label>
    </listViews>
    <listViews>
        <fullName>Script_0004</fullName>
        <columns>NAME</columns>
        <columns>acf_Question__c</columns>
        <columns>acf_Script__c</columns>
        <columns>acf_Sequence_No__c</columns>
        <columns>acf_Master_Question__c</columns>
        <columns>acf_Type__c</columns>
        <columns>acf_Active__c</columns>
        <columns>acf_ApiName__c</columns>
        <columns>acf_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acf_Script__c</field>
            <operation>equals</operation>
            <value>Script-0004</value>
        </filters>
        <label>5 Asset &amp; Liabilities</label>
    </listViews>
    <listViews>
        <fullName>Sub_Questions</fullName>
        <columns>NAME</columns>
        <columns>acfIs_New_Loan__c</columns>
        <columns>acfIs_refinance__c</columns>
        <columns>acf_Question__c</columns>
        <columns>acf_Script__c</columns>
        <columns>acf_Sequence_No__c</columns>
        <columns>acf_Master_Question__c</columns>
        <columns>acf_Type__c</columns>
        <columns>acf_Active__c</columns>
        <columns>acf_ApiName__c</columns>
        <columns>acf_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acf_Master_Question__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Sub Questions</label>
    </listViews>
    <nameField>
        <displayFormat>Question-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <recordTypes>
        <fullName>clickPost_Login</fullName>
        <active>true</active>
        <label>Post Login</label>
    </recordTypes>
    <recordTypes>
        <fullName>clickPrelogin</fullName>
        <active>true</active>
        <label>Prelogin-Refinance</label>
    </recordTypes>
    <recordTypes>
        <fullName>clickPrelogin_New_Loan</fullName>
        <active>true</active>
        <label>Prelogin-New Loan</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Dependent_Questions_Lookup_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(acf_Script__c) == false &amp;&amp; ISBLANK(acf_Master_Question__c) == false</errorConditionFormula>
        <errorMessage>Please select:
1. Script lookup only for master questions
2. Master question lookup only for dependent questions</errorMessage>
    </validationRules>
</CustomObject>